--- a/compose.yml
+++ b/compose.yml
@@ -3,7 +3,10 @@ services:
     image: dockurr/windows
     container_name: windows
     environment:
-      VERSION: "11"
+      VERSION: "10"
+      DISK_SIZE: "90G"
+      RAM_SIZE: "8G"
+      CPU_CORES: "4"
     devices:
       - /dev/kvm
       - /dev/net/tun
@@ -14,6 +17,6 @@ services:
       - 3389:3389/tcp
       - 3389:3389/udp
     volumes:
-      - ./windows:/storage
+      - ../../tmp/windows:/storage
     restart: always
     stop_grace_period: 2m
