--- a/compose.yml
+++ b/compose.yml
@@ -17,6 +17,6 @@ services:
       - 3389:3389/tcp
       - 3389:3389/udp
     volumes:
-      - ../../tmp/windows:/storage
+      - ./windows:/storage
     restart: always
     stop_grace_period: 2m
